--- a/index-view/plugin.qrc
+++ b/index-view/plugin.qrc
@@ -1,6 +1,6 @@
 <!DOCTYPE RCC>
 <RCC version="1.0">
-    <qresource prefix="/kxmlgui5/katesymbolviewer">
+    <qresource prefix="/kxmlgui5/kateindexview">
         <file>ui.rc</file>
     </qresource>
 </RCC>
